--- a/index.html
+++ b/index.html
@@ -234,7 +234,7 @@
     <script src="https://unpkg.com/scrollreveal"></script>
     <script src="script.js"></script>
     <footer class="footer">
-        <small class="message">Thanks for visiting and happy coding!</small>
+        <small class="message">Thanks for visiting!</small>
         <small class="copyright">&copy; Copyright 2025. All rights reserved.</small>
     </footer>
 </body>
