--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
             <div class="projects">
                 <div class="project">
                     <i class="fas fa-hotel"></i>
-                    <h4><a href="prayagrajkumbhmela.com" target="_blank">Prayagrajkumbhmela.com</a></h4>
+                    <h4><a href="prayagrajkumbhmela.com" target="_blank">Prayagraj <br> kumbhmela.com</a></h4>
                     <p>Developed and designed the UI of prayagrajkumbhmela.com, a successful travel website for Maha
                         Kumbh 2025, using Figma for UI/UX and React.js for frontend development. Co-founded this venture
                         with a friend, providing essential services to visitors and generating ₹500,000+ in revenue.
@@ -234,7 +234,7 @@
     <script src="https://unpkg.com/scrollreveal"></script>
     <script src="script.js"></script>
     <footer class="footer">
-        <small class="message">Thanks for visiting!</small>
+        <small class="message">Thanks for visiting and happy coding!</small>
         <small class="copyright">&copy; Copyright 2025. All rights reserved.</small>
     </footer>
 </body>
